# survey-db

./: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 00578d1644f4_add_unique_constraints_answers.py  05ccf504dc51_fix_benchmark_empty_result_final.py  2308848b6589_add_activity_time_slots_view.py  49e99ca29ac9_add_survey_benchmark_function.py  540fa1a9b90f_initial_base.py  5a518033839a_add_survey_responses_view.py  7b3724d89faa_fix_survey_benchmark_null_issue.py  b22b6e46cac7_add_user_demographics_view.py  b765340100b6_initial_migration.py  b8c42e06244a_add_anomaly_candidates_view.py  e38fc5fa1c13_fix_admin_summary_funnel_logic.py  e6de686bc831_add_admin_summary_view.py
app/: main.py  models.py  schemas.py
app/core/: config.py  database.py  deps.py  exceptions.py  middleware.py  security.py  utils.py
app/routers/: admin.py  auth.py  general.py  surveys.py  users.py
app/services/: admin.py  survey.py
app/templates/: base.html  error.html  index.html  survey_detail.html
data/: surveys.json
scripts/: seed.py
sql/: task_10_analyzing_complex_datasets.sql  task_1_create_db.sql  task_2_single_table_queries_data.sql  task_3_multi_table_queries_data.sql  task_4_window_functions.sql  task_5_index_optimization.sql  task_7_time_series_analysis.sql  task_8_chorot_analysis.sql  task_9_anomaly_detection.sql
sql/task_1/: create_db.sql  insert_data.sql  inset_data_v2.sql
tests/: conftest.py  test_auth.py  test_participation.py  test_rbac.py  test_surveys.py
(+27 files in other folders)
